--- a/index.html
+++ b/index.html
@@ -6,6 +6,79 @@
 	<title></title>
 </head>
 <body>
+	<header>
+		<div id="gauche">
+			<a href=""><img src="img/logo-w-type.svg"></a>
+			<!--<div class="head">
+				<strong>Features</strong>
+				<strong>Pricing</strong>
+				<strong>More +</strong>
+			</div>-->
+		</div>
+		<div id="droite">
+			<button class="hamburger">&#9776;MENU</button>
+			<div class="menu">
+				<ul>
+					<a href="#"><li>Features</li></a>
+					<a href="#"><li>Pricing</li></a>
+					<a href="#"><li>Add-on</li></a>
+					<a href="#"><li>Feature Roadmap</li></a>
+					<a href="#"><li>All Feature</li></a>
+					<a href="#"><li>Mobile Apps</li></a>
+					<a href="#"><li>Timer</li></a>
+					<a href="#"><li>Non-Profit Discount</li></a>
+					<a href="#"><li>Security</li></a>
+					<a href="#"><li>About & Contact</li></a>
+					<div id="button">
+						<button id="b1">Try It Free</button>
+						<button id="b2">Sign In</button>
+					</div>
+					<div id="menu_bas">
+						<strong>Help & Support</strong>
+						<strong>Blog</strong>
+						<strong>Resources</strong>
+					</div>
+				</ul>
+			</div>
+		<!--	<div class="head">
+				<strong>Help & Support</strong>
+				<strong>Blog</strong>
+				<strong>Resources</strong>
+				<button>Try It Free</button>
+				<button>Sign In</button>
+				</div>-->
+		</div>
+	</header>
+	<h1>Powerful, yet simple project management tool</h1>
+	<nav>
+		<div>
+			<h3>Task Management</h3>
+			<p>Stay organized with an advanced to-do list and track your project.</p>
+		</div>
+		<div>
+			<h3>Team Collaboration</h3>
+			<p>Efficiently work together with your team to deliver top-notch results.</p>
+		</div>
+		<div>
+			<h3>Time Tracking</h3>
+			<p>Track every minute of your work and bill clients accordingly.</p>
+		</div>
+		<div>
+			<h3>Invoicing</h3>
+			<p>Easily issue invoices for your work, save time, and get paid.</p>
+		</div>
+	</nav>
+	<article>
+		<div id="content">
+			<h4>Active Collab helps your team stay organized when you outgrow email. <br> But it's so much more than that - with plenty of neat add-ons, it's a  <br> one-stop solution for all your business needs.</h4>
+			<button>Try it free for 30 days!</button>
+			<h5>No credit card required, unsubscribe at any time.</h5>
+		</div>
+		<div id="content1">
+			<img id="imgfond" src="img/fond.png">
+		</div>
 
+	</article>
+	<script type="text/javascript" rel="script/style.js"></script>
 </body>
 </html>
