--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 		<nav>
 			<div>
 				<div id="anim1" class="anim">
-					<div id="logo_page">
-						<map id="map1">
-							<area shape="rect" coords="10,3,20,16" href="#map1">
-						</map>
-					</div>
+					<svg width='200px' height='200px' viewbox='0 0 200 200'>
+						<path d='M65 55 h70 v90 h-70Z M100 75 h25 M100 90 h25 M100 105 h25 M100 120 h25 '  stroke ='black' fill='white'/>
+						<path d='M135 145 l20 -20 h-20Z ' stroke='black' fill='#aab0bb'/>
+						<path d='M75 75 L80 80 L90 70' stroke="green" fill='white'/>
+					</svg>
 				</div>
 				<h3>Task Management</h3>
 				<p>Stay organized with an advanced to-do list and track your project.</p>
